[package]
name = "acos5_64"
version = "0.0.23"
authors = ["carblue <bluecars@posteo.eu>"]
edition = "2018"

[dependencies]
libc = "0.2"
opensc-sys = { git = "https://github.com/carblue/opensc-sys", rev = "43ac40a" }

[build-dependencies]
pkg-config = "=0.3.14"

[lib]
name = "acos5_64"
crate-type = ["cdylib"]
