[package]
name = "acos5"
version = "0.0.28"
authors = ["carblue <bluecars@posteo.eu>"]
edition = "2018"

[dependencies]
libc = "0.2"
opensc-sys = { git = "https://github.com/carblue/opensc-sys", rev = "f082159" }
#num-traits = "0.2"

[build-dependencies]
pkg-config = "=0.3.14"

[lib]
name = "acos5"
crate-type = ["cdylib"]
