[package]
name = "acos5"
version = "0.0.30"
authors = ["carblue <bluecars@posteo.eu>"]
edition = "2018"

[dependencies]
libc = "0.2"
num-integer = "0.1"
cfg-if = "0.1"
#function_name = "0.2"
opensc-sys = { path = "../opensc-sys" }

[build-dependencies]
pkg-config = "0.3"

[lib]
name = "acos5"
crate-type = ["cdylib"]
