[package]
name = "acos5_pkcs15"
version = "0.0.30"
authors = ["Carsten Blüggel, carblue <bluecars@posteo.eu>"]
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(v0_20_0)', 'cfg(v0_21_0)', 'cfg(v0_22_0)', 'cfg(v0_23_0)', 'cfg(v0_24_0)', 'cfg(v0_25_0)', 'cfg(v0_25_1)',
  'cfg(dont_test__this_signature_changed)',
  'cfg(iup_user_consent)',
  'cfg(log)',
  'cfg(rsa_key_gen_verbose)'
] }

[dependencies]
libc = "0.2"
cfg-if = "1.0"
opensc-sys = { path = "../opensc-sys" }

[lib]
name = "acos5_pkcs15"
crate-type = ["cdylib"]
