[package]
name = "opensc-sys"
links = "opensc"
version = "0.0.30"
authors = ["Carsten Blüggel, carblue <bluecars@posteo.eu>"]
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(v0_20_0)', 'cfg(v0_21_0)', 'cfg(v0_22_0)', 'cfg(v0_23_0)', 'cfg(v0_24_0)', 'cfg(v0_25_0)', 'cfg(v0_25_1)',
  'cfg(v0_26_0)',
  'cfg(acos5_impl_default)',
  'cfg(impl_default)',
  'cfg(impl_display)',
  'cfg(impl_newAT_newCCT_newCT)'
] }

[dependencies]
libc = "0.2"
cfg-if = "1.0"

[build-dependencies]
libloading = "0.8"
